--- a/inicio.css
+++ b/inicio.css
@@ -12,6 +12,7 @@
     /* Fontes e tamanhos */
     --fontsite:'Montserrat',Arial,sans-serif;
     --font-size-padrao: 1rem;
+    --font-size-pequeno: 1.2rem;
     --font-size-medio: 1.5rem;
     --font-size-grande: 2rem;
     --cor-branca: var(--cor5);
@@ -47,11 +48,14 @@ html,body{
 .categorias{
     display: flex;
     gap: 50px;
-    font-size: var(--font-size-medio);
+    font-size: var(--font-size-pequeno);
     list-style: none;
 }
+.logo{
+    width: 80px;
+}
 .material-symbols-outlined {
-    font-size: 50px;
+    font-size: 35px;
     color:var(--cor5);
     /* background-color: #F27405; */
     /* border-radius: 50%; */
@@ -69,24 +73,61 @@ html,body{
     align-items: center;
     border: 1px solid black;
 }
-.oferta{
-    width:90%;
+/* PadraoS = Configuração padrão para a section */
+.PadraoS{
+    width:100%;
     margin: 20px;
     background-color: #000000;
-    height: 300px;
     display: flex;
     flex-direction: column;
+}
+.imagem{
+    height: 200px;
 }
 .cards{
     display: flex;
     flex-wrap: wrap;
+    gap: 15px;
 }
-.promo{
+.ofertaD{
     background-color: var(--cor2);
     width: 200px;
-    height: 100px;
-    margin: 10px;
+    /* height: 100px; */
+    margin-top:10px;
+    text-decoration: none;
+}
+.produto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.pro{
+    width: 80%;
+}
+.preco{
+    padding-top: 10px;
+    font-weight: bold;
+    color: var(--cor4);
 }
 .areaO{
     color: var(--cor5);
+    border-bottom: 2px solid var(--cor4);
+    width: 200px;
+    padding-bottom: 8px;
+    margin-bottom: 10px;
+}
+.catpro{
+    display: flex;
+    align-items: start;
+    flex-flow: row wrap;
+    margin-top:10px;
+    gap: 10px;
+}
+.grupo1{
+    text-align: center;
+    text-decoration: none;
+}
+.teste{
+    width: 348px;
 }
