--- a/inicio.css
+++ b/inicio.css
@@ -24,6 +24,7 @@
     padding: 0;
     margin: 0;
     box-sizing:border-box;
+    text-decoration: none;
     font-family: var(--fontsite);
     color:var(--cor5) ;
 }
@@ -33,13 +34,15 @@ html,body{
     background-color: var(--cor5);
     overflow-x: hidden;
 }
+
+/* Estilização da Header */
 .cabeca1{
     background-color: var(--cor1);
     padding: 10px 30px;
 }
-.div{
-    /* margin: 0px 0px 0px 200px; */
-}
+/* .div{
+    margin: 0px 0px 0px 200px; 
+} */
 .menu{
     display: flex;
     justify-content: space-between;
@@ -60,7 +63,7 @@ html,body{
     /* background-color: #F27405; */
     /* border-radius: 50%; */
 }
-
+/* Estilização do corpo e conteudo */
 .container{
     max-width: 80%;
     margin: auto;
@@ -71,18 +74,24 @@ html,body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 /* PadraoS = Configuração padrão para a section */
 .PadraoS{
     width:100%;
     margin: 20px;
-    background-color: #000000;
+    /* background-color: #000000; */
     display: flex;
     flex-direction: column;
 }
+/* Ofertas do dia */
 .imagem{
+    color: var(--cor-preta);
     height: 200px;
+    background-color: #d1cecead;
+    border-radius: 5px;
+    box-shadow: 1px 2px 3px #00000044;
+
 }
 .cards{
     display: flex;
@@ -90,11 +99,13 @@ html,body{
     gap: 15px;
 }
 .ofertaD{
-    background-color: var(--cor2);
+    /* background-color: var(--cor2); */
     width: 200px;
     /* height: 100px; */
     margin-top:10px;
-    text-decoration: none;
+    border-radius: 10px;
+    border: 1px solid #00000044;
+    box-shadow: 1px 2px 3px #00000044;
 }
 .produto{
     display: flex;
@@ -105,18 +116,23 @@ html,body{
 .pro{
     width: 80%;
 }
+.descricao{
+    color: var(--cor-preta);
+}
 .preco{
     padding-top: 10px;
     font-weight: bold;
+    margin: 5px;
     color: var(--cor4);
 }
 .areaO{
-    color: var(--cor5);
+    color: var(--cor-preta);
     border-bottom: 2px solid var(--cor4);
-    width: 200px;
+    width:230px;
     padding-bottom: 8px;
     margin-bottom: 10px;
 }
+/* Estilização Categorias */
 .catpro{
     display: flex;
     align-items: start;
@@ -124,10 +140,66 @@ html,body{
     margin-top:10px;
     gap: 10px;
 }
+.catpro p {
+    color: var(--cor-preta);
+    font-weight: bold;
+}
 .grupo1{
     text-align: center;
     text-decoration: none;
 }
-.teste{
+.catimg{
     width: 348px;
+    border-radius: 5px;
+    box-shadow: 1px 2px 3px #00000044;
+}
+/* Estilização logo parceiros */
+.sparceiros{
+    /* background-color: var(--cor4); */
+    display: flex;
+    justify-content:center ;
+    align-items: center;
+    flex-flow: row wrap;
+    gap: 25px;
+    margin: 10px 0px;
+}
+.marca{
+    background-color: #d1cecead;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;box-shadow: 1px 2px 3px #00000044;
+}
+/* Estilização Footer */
+.final{
+    background-color: var(--cor1);
+    display: flow-root;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.conteudof{
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    /* border-top: 2px solid #f2f2f228; */
+}
+.logof{
+    width: 80px;
+}
+.footers{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: start;
+    
+}
+.footers h4 {
+    width: 100%; 
+    text-align: left; 
+    margin: 0 0 15px 0; 
+    color: var(--cor5); 
+    font-size: 1.1rem;
+}
+.linksf:hover{
+    text-decoration: underline;
 }
