--- a/inicio.css
+++ b/inicio.css
@@ -98,6 +98,8 @@ html,body{
     box-shadow: 1px 2px 3px #00000044;
     
 }
+
+
 /* Ofertas do dia */
 .cards{
     display: flex;
@@ -127,16 +129,13 @@ html,body{
 
 .pro {
     width: 100%;
-    height: 60%;
+    /* height: 60%; */
     object-fit: cover;
     transition: transform 0.5s ease;
 }
 
 .ofertaD:hover .pro {
     transform: scale(1.1); 
-}
-.pro{
-    width: 80%;
 }
 .descricao{
     color: var(--cor-preta);
@@ -187,9 +186,10 @@ html,body{
 }
 .marca{
     background-color: #d1cecead;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
-    width: 80px;
-    height: 80px;box-shadow: 1px 2px 3px #00000044;
+    box-shadow: 1px 2px 3px #00000044;
 }
 /* Estilização Footer */
 .main-footer{
@@ -219,9 +219,12 @@ html,body{
 .footer-section h4 {
     width: 100%; 
     text-align: left; 
-    margin: 0 0 15px 0; 
+    margin: 0 0 8px 0; 
     color: var(--cor5); 
     font-size: 1.1rem;
+}
+.footer-links{
+    padding-top: 9px;
 }
 .footer-links:hover{
     text-decoration: underline;
