--- a/estilopags/sobrenos.css
+++ b/estilopags/sobrenos.css
@@ -77,6 +77,7 @@ html,body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 60px;
     /* border: 1px solid black; */
 }
 .sobre-main{
@@ -89,45 +90,50 @@ html,body{
 }
 .empresa{
     width: 60%;
-
-}
-.promovale{
-    background-color: #074073;
-    width: 30%;
-    padding: 30px;
+    
 }
 .titulo{
     font-size: 2em;
-}
-.cor{
     color: var(--cor-preta);
 }
+
 .texto{
     width: 50%;
     text-align: justify;
     margin: 10px 0px 30px 0px;
-}
-.marcas-parceiras{
-    /* padding: 20px 0px 20px 0px; */
-    margin: 20px 0px 30px 0px;
-    
+    color: var(--cor-preta);
 }
 .texto-centro{
     text-align: center;
-    margin-bottom: 30px;
-    font-size: 1.5em;
+    margin-bottom: 10px;
 }
-.logos-p{
+.redes-sociais{
+    width: 30%;
     display: flex;
-    justify-content: space-around;
+    gap: 20px;
 }
+/* marcas parceiras */
+.marcas-parceiras{
+    padding: 50px;
+    background-color: rgba(211, 211, 211, 0.274);
+}
+/* Marcas parceiras */
+.logos-p{
+    
+        /* background-color: var(--cor4); */
+    display: flex;
+    justify-content:center ;
+    align-items: center;
+    flex-flow: row wrap;
+    gap: 25px;
+}
+/* Formulario */
 .proposta{
-    width: 100%;
+
     /* text-align: center; */
-    background-color:#074173ec;
-    border: 3px solid #052038;
-    border-radius: 15px;
-    margin-bottom:50px;
+    background-color:var(--cor3);
+    /* border: 3px solid #052038; */
+    /* border-radius: 15px; */
 }
 .pre-form{
     display: flex;
@@ -135,11 +141,21 @@ html,body{
     /* justify-content: start; */
     align-items: center;
     gap: 20px;
-    margin: 50px;
+    padding: 30px;
+}
+.pre-form h2{
+    color: var(--cor5);
+
+}
+.pre-form p{
+    width: 40%;
+    text-align: center;
+
 }
 .botao{
-    background-color: var(--cor4);
-    border: 2px solid #cc6d1b ;
+    background-color: var(--cor1);
+    /* border: 2px solid #cc6d1b ; */
+    font-weight: bold;
     border-radius: 15px;
     padding: 20px;
 }
@@ -149,7 +165,7 @@ html,body{
     background-color: var(--cor1);
     display: flow-root;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 8px;
 }
 .footer-content{
     padding-top: 10px;
@@ -160,7 +176,7 @@ html,body{
     /* border-top: 2px solid #f2f2f228; */
 }
 .logof{
-    width: 80px;
+    width: 90px;
     padding-left: 10px;
 }
 .footer-section{
