--- a/estilopags/inicio.css
+++ b/estilopags/inicio.css
@@ -25,6 +25,7 @@
     margin: 0;
     box-sizing:border-box;
     text-decoration: none;
+    list-style: none;
     font-family: var(--fontsite);
     color:var(--cor5) ;
     
@@ -37,38 +38,77 @@ body{
 }
 
 /* Estilização da Header */
-.cabeca1{
-    background-color: var(--cor1);
-    padding: 10px 30px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
+body a{
+    color: var(--cor5);
 }
-/* .div{
-    margin: 0px 0px 0px 200px; 
-} */
 .menu{
+    background-color: var(--cor1);
+    padding: 10px 20px;
+}
+.nav-bar{
+    
     display: flex;
     justify-content: space-between;
     align-items:center;
 }
-.categorias{
+.nav-bar ul{
     display: flex;
     gap: 50px;
     font-size: var(--font-size-pequeno);
     list-style: none;
 }
+.nav-list-segunda{
+    display: none;
+}
 .logo{
-    width: 80px;
+    width:80%;
 }
 .material-symbols-outlined {
     font-size: 35px;
     color:var(--cor5);
     /* background-color: #F27405; */
     /* border-radius: 50%; */
+    cursor: pointer;
 }
+.hb-funcoes{
+    display: none;
+}
+
+@media screen and (max-width: 900px) {
+    .buscar{
+        display: none;
+    }
+    .hb-funcoes{
+        display: flex;
+    }
+    .nav-list{
+        display: none;
+    }
+    /* .nav-list-segunda{
+        display: block;
+    } */
+    .nav-list-segunda  .op{
+        display: block;
+    }
+    .buscar-segunda{
+        text-align: center;
+        padding: 10px;
+    }
+    .nav-links a{
+        display: block;
+        margin: auto;
+        text-align: center;
+        padding: 10px;
+        background-color:var(--cor1);
+    }
+    .nav-links a:hover{
+        background-color: var(--cor3);
+        color: var(--cor1);
+    }
+    
+    
+}
+
 /* Estilização do corpo e conteudo */
 .container{
     max-width: 80%;
@@ -79,14 +119,14 @@ body{
     /* main/largura do site  */
     background-color:var(--cor5);
     display: flex;
+    width:100%;
     flex-direction: column;
     align-items: center;
-    padding-top: 100px;
     /* border: 1px solid black; */
 }
 /* PadraoS = Configuração padrão para a section */
 .PadraoS{
-    width:100%;
+    /* width:100%; */
     margin: 20px;
     /* background-color: #000000; */
     display: flex;
@@ -334,4 +374,12 @@ body{
 }
 .footer-links:hover{
     text-decoration: underline;
+}
+@media screen and (max-width: 900px) {
+    .container{
+        width: 100%;
+    }
+    .PadraoS{
+        margin: 10px 0px 0px 0px;
+    }
 }
